# rl-point-maze

./: README.md  pyproject.toml
config/: td3_bc.yaml
models/: best_model_actor.pth  best_model_critic.pth  td3_bc_offline_best_actor.pth  td3_bc_offline_best_critic.pth  td3_bc_offline_step_100000_actor.pth  td3_bc_offline_step_100000_critic.pth  td3_bc_offline_step_10000_actor.pth  td3_bc_offline_step_10000_critic.pth  td3_bc_offline_step_105000_actor.pth  td3_bc_offline_step_105000_critic.pth  td3_bc_offline_step_110000_actor.pth  td3_bc_offline_step_110000_critic.pth  td3_bc_offline_step_115000_actor.pth  td3_bc_offline_step_115000_critic.pth  td3_bc_offline_step_120000_actor.pth  td3_bc_offline_step_120000_critic.pth  td3_bc_offline_step_125000_actor.pth  td3_bc_offline_step_125000_critic.pth  td3_bc_offline_step_130000_actor.pth  td3_bc_offline_step_130000_critic.pth  td3_bc_offline_step_135000_actor.pth  td3_bc_offline_step_135000_critic.pth  td3_bc_offline_step_140000_actor.pth  td3_bc_offline_step_140000_critic.pth  td3_bc_offline_step_145000_actor.pth  td3_bc_offline_step_145000_critic.pth  td3_bc_offline_step_150000_actor.pth  td3_bc_offline_step_150000_critic.pth  td3_bc_offline_step_15000_actor.pth  td3_bc_offline_step_15000_critic.pth  td3_bc_offline_step_155000_actor.pth  td3_bc_offline_step_155000_critic.pth  td3_bc_offline_step_160000_actor.pth  td3_bc_offline_step_160000_critic.pth  td3_bc_offline_step_165000_actor.pth  td3_bc_offline_step_165000_critic.pth  td3_bc_offline_step_170000_actor.pth  td3_bc_offline_step_170000_critic.pth  (+86 more)
src/: .gitignore
(+54 files in other folders)
